scripts/nullness/original/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8.txt
../original/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreRoom.java:21: error: [assignment] incompatible types in assignment.
	private Schematic room_map = null;
	                             ^
  found   : null (NullType)
  required: @Initialized @NonNull Schematic
../original/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreRoom.java:29: error: [initialization.fields.uninitialized] the constructor does not initialize fields: type, special_dir, room_dir
	public CoreRoom(Grid grid) {
	       ^
../original/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreRoom.java:30: error: [assignment] incompatible types in assignment.
		this.roomPopulator = new RoomPopulator(this);
		                     ^
  found   : @UnderInitialization(net.woopa.dungeon.core.RoomPopulator.class) @NonNull RoomPopulator
  required: @Initialized @NonNull RoomPopulator
../original/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreRoom.java:30: error: [argument] incompatible argument for parameter r of RoomPopulator constructor.
		this.roomPopulator = new RoomPopulator(this);
		                                       ^
  found   : @UnderInitialization @NonNull CoreRoom
  required: @Initialized @NonNull CoreRoom
../original/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreRoom.java:32: error: [method.invocation] call to generateRandom() not allowed on the given receiver.
		generateRandom();
		              ^
  found   : @UnderInitialization @NonNull CoreRoom
  required: @Initialized @NonNull CoreRoom
../original/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreRoom.java:33: error: [method.invocation] call to placeRandom() not allowed on the given receiver.
		placeRandom();
		           ^
  found   : @UnderInitialization @NonNull CoreRoom
  required: @Initialized @NonNull CoreRoom
../original/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreRoom.java:123: error: [return] incompatible types in return.
			return null;
			       ^
  type of expression: null (NullType)
  method return type: @Initialized @NonNull Direction
../original/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreRoom.java:152: error: [return] incompatible types in return.
			return null;
			       ^
  type of expression: null (NullType)
  method return type: @Initialized @NonNull Direction
../original/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreRoom.java:193: error: [argument] incompatible argument for parameter s of CoreRoom.generateSpecialRoomRandom.
				generateSpecialRoomRandom(null);
				                          ^
  found   : null (NullType)
  required: @Initialized @NonNull Schematic
../original/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreLevelCreator.java:12: error: [initialization.field.uninitialized] the default constructor does not initialize field levelStart
	private Vector2D levelStart, levelEnd;
	                 ^
../original/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreLevelCreator.java:12: error: [initialization.field.uninitialized] the default constructor does not initialize field levelEnd
	private Vector2D levelStart, levelEnd;
	                             ^
../original/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreLevelCreator.java:13: error: [initialization.field.uninitialized] the default constructor does not initialize field startDir
	private Direction startDir, endDir;
	                  ^
../original/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreLevelCreator.java:13: error: [initialization.field.uninitialized] the default constructor does not initialize field endDir
	private Direction startDir, endDir;
	                            ^
../original/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreLevelCreator.java:35: error: [return] incompatible types in return.
			return null;
			       ^
  type of expression: null (NullType)
  method return type: @Initialized @NonNull Grid
../original/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreLevelCreator.java:110: error: [return] incompatible types in return.
		return r;
		       ^
  type of expression: @Initialized @Nullable CoreRoom
  method return type: @Initialized @NonNull CoreRoom
../original/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreLevelCreator.java:151: error: [return] incompatible types in return.
		return r;
		       ^
  type of expression: @Initialized @Nullable CoreRoom
  method return type: @Initialized @NonNull CoreRoom
../original/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreDownSchematic.java:118: error: [dereference.of.nullable] dereference of possibly-null reference tmp
		if (!tmp.isEmpty()) {
		     ^
../original/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/Main2.java:11: error: [assignment] incompatible types in assignment.
	public final MaterialManager mm = new MaterialManager(this);
	                                  ^
  found   : @UnderInitialization(net.woopa.dungeon.managers.MaterialManager.class) @NonNull MaterialManager
  required: @Initialized @NonNull MaterialManager
../original/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/Main2.java:11: error: [argument] incompatible argument for parameter m of MaterialManager constructor.
	public final MaterialManager mm = new MaterialManager(this);
	                                                      ^
  found   : @UnderInitialization @NonNull Main2
  required: @Initialized @NonNull Main2
../original/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/Main2.java:13: error: [assignment] incompatible types in assignment.
	public final SchematicManager scm = new SchematicManager(this);
	                                    ^
  found   : @UnderInitialization(net.woopa.dungeon.managers.SchematicManager.class) @NonNull SchematicManager
  required: @Initialized @NonNull SchematicManager
../original/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/Main2.java:13: error: [argument] incompatible argument for parameter main of SchematicManager constructor.
	public final SchematicManager scm = new SchematicManager(this);
	                                                         ^
  found   : @UnderInitialization @NonNull Main2
  required: @Initialized @NonNull Main2
../original/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/Main2.java:36: error: [dereference.of.nullable] dereference of possibly-null reference l
		l.show();
		^
../original/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/managers/MaterialManager.java:25: error: [iterating.over.nullable] iterating over possibly-null reference ms
		for (Material m : ms) {
		                  ^
../original/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/managers/SettingsManager.java:17: error: [iterating.over.nullable] iterating over possibly-null reference ps
		for (Property p : ps) {
		                  ^
../original/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/managers/SettingsManager.java:23: error: [argument] incompatible argument for parameter s of Integer.parseInt.
		return Integer.parseInt(properties.getProperty(p.getKey()));
		                                              ^
  found   : @Initialized @Nullable String
  required: @Initialized @NonNull String
../original/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/managers/SchematicManager.java:35: error: [iterating.over.nullable] iterating over possibly-null reference ss
		for (Schematic s : ss) {
		                   ^
../original/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/managers/SchematicManager.java:46: error: [iterating.over.nullable] iterating over possibly-null reference ss
		for (Schematic s : ss) {
		                   ^
../original/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreSchematic.java:119: error: [dereference.of.nullable] dereference of possibly-null reference tmp
	    if(!tmp.isEmpty()) {
	        ^
../original/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/datatypes/Level.java:10: error: [initialization.fields.uninitialized] the constructor does not initialize fields: grid
	public Level(LevelCreator lc, Vector2D levelSize, Vector2D startLocation,
	       ^
../original/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/datatypes/Level.java:13: error: [method.invocation] call to setGrid(net.woopa.dungeon.datatypes.Grid) not allowed on the given receiver.
		this.setGrid(this.levelCreator.generate(levelSize, startLocation,
		            ^
  found   : @UnderInitialization @NonNull Level
  required: @Initialized @NonNull Level
30 errors
